# manim-timeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
animations/: common.py
animations/demos/: EubulidesOfMiletus.py  aristotle.py  beamer_slide.py  bertrand_russel.py  blackbox.py  block_example.py  clip.py  code_example.py  dynamic_axes.py  ecm.py  einstein.py  graph_example.py  latex.py  logo.py  manim.cfg  max_black.py  plato.py  socrates.py  timeline.py  timeline_events.py  timeline_helper.py  transform_graphs.py  wang_mendel.py  ww2.py  zadeh.py
assets/: imperfect_circle
examples/: code_example.py  dynamic_axes.py  graph_example.py  logo.py  moving_func.py  transform_graphs.py  ww2.py
examples/presentation/: fuzzy_logic_history.py  timeline_events.py
manim_timeline/: graph_helper.py  timeline.py
mtimeline/: __init__.py  axes.py  graph.py  quotes.py  timeline.py  timeline_helper.py
presentation/: cart_pole.py  chapters.py  med.py  timeline_chapters.py  timeline_events.py
presentation/conclusion/: existing_issues.py  new_horizons.py  plan.py  proposal.py
presentation/introduction/: dnn.py  linguistics.py  motivation.py  nfn.py  outline.py  proposal.py
presentation/methods/: clip.py  cql.py  ecm.py  wang_mendel.py
presentation/people/: EubulidesOfMiletus.py  aristotle.py  bertrand_russell.py  einstein.py  godel.py  lukasiewicz.py  manim.cfg  max_black.py  plato.py  socrates.py  zadeh.py
presentation/prototype/: avoiding_invalid.py  constrained_gumbel_softmax.py  gumbel_max_trick.py  high_dim_trick.py  issue_with_logits.py  (+5 more)
(+105 files in other folders)
